--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
 <!-- Write your HTML in this file -->
+<!DOCtype html>
+<html lang="en">
+    <head> <link rel="stylesheet" type="text/css" href="style.css" >
+        <body> <h1>"Hello, World!"</h1></body>
+    </head>
+</html>
